force-app/main/default/objects/OrgChartPlus__MSO_OrgChart2TeamMember__c/OrgChartPlus__MSO_OrgChart2TeamMember__c.object-meta.xml
<CustomObject>
    <description>Global selling team info</description>
    <label>MSO OrgChart TeamMember</label>
    <nameField>
        <displayFormat>MOT-{00000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MSO OrgChart TeamMembers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>