force-app/main/default/objects/OrgChartPlus__MSO_OrgChart2TeamMember__c/fields/OrgChartPlus__Competitor__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor</label>
    <referenceTo>OrgChartPlus__SM_Competitor__c</referenceTo>
    <relationshipLabel>MSO OrgChart TeamMembers</relationshipLabel>
    <relationshipName>MSO_OrgChart_TeamMembers</relationshipName>
    <type>Lookup</type>
</CustomField>