force-app/main/default/objects/OrgChartPlus__MSO_OrgChart2TeamMember__c/fields/OrgChartPlus__Contact__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MSO OrgChart TeamMembers</relationshipLabel>
    <relationshipName>MSO_OrgChart_TeamMembers</relationshipName>
    <type>Lookup</type>
</CustomField>