force-app/main/default/objects/OrgChartPlus__MSO_OrgChart2TeamMember__c/fields/OrgChartPlus__MoleculePosX__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__MoleculePosX__c</fullName>
    <label>MoleculePosX</label>
    <precision>16</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>