force-app/main/default/objects/OrgChartPlus__MSO_OrgChart2TeamMember__c/fields/OrgChartPlus__Name__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__Name__c</fullName>
    <formula>IF ( ISNULL( OrgChartPlus__User__c )=false, OrgChartPlus__User__r.FirstName + &apos; &apos; + OrgChartPlus__User__r.LastName, 
IF ( ISNULL( OrgChartPlus__Contact__c )=false, OrgChartPlus__Contact__r.FirstName + &apos; &apos; + OrgChartPlus__Contact__r.LastName, 
IF ( ISNULL( OrgChartPlus__Competitor__c )=false, OrgChartPlus__Competitor__r.Name, 
IF ( ISNULL( OrgChartPlus__NonSFDCPerson__c )=false, OrgChartPlus__NonSFDCPerson__r.Name, 
null ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>