force-app/main/default/objects/OrgChartPlus__MSO_OrgChart2TeamMember__c/fields/OrgChartPlus__NonSFDCPerson__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__NonSFDCPerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non-SFDC Person</label>
    <referenceTo>OrgChartPlus__SM_NonSFUser__c</referenceTo>
    <relationshipLabel>MSO OrgChart TeamMembers</relationshipLabel>
    <relationshipName>MSO_OrgChart_TeamMembers</relationshipName>
    <type>Lookup</type>
</CustomField>