force-app/main/default/objects/OrgChartPlus__MSO_OrgChart2TeamMember__c/fields/OrgChartPlus__OrgChart__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__OrgChart__c</fullName>
    <label>OrgChart</label>
    <referenceTo>OrgChartPlus__MSO_OrgChart2__c</referenceTo>
    <relationshipLabel>MSO OrgChart TeamMembers</relationshipLabel>
    <relationshipName>MSO_OrgChart_TeamMembers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>