force-app/main/default/objects/OrgChartPlus__MSO_OrgChart2TeamMember__c/fields/OrgChartPlus__ShowFlags__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__ShowFlags__c</fullName>
    <label>ShowFlags</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>