force-app/main/default/objects/OrgChartPlus__MSO_OrgChart2TeamMember__c/fields/OrgChartPlus__User__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MSO_OrgChart_TeamMembers</relationshipName>
    <type>Lookup</type>
</CustomField>